--- a/Deep Learning/MobileNet_Matt.ipynb
+++ b/Deep Learning/MobileNet_Matt.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table 2 Recreation: MobileNet\n",
+    "The paper uses MobileNetv3, however only MobileNetv2 is readily available on pytorch. There is a small version of MobileNetv3 that I used which was downloaded from GitHub, however the results were poor so I suspect the authors had access to the large version. Hopefully the pre-trained large version will be available soon.\n",
+    "\n",
+    "Summary: \n",
+    "\n",
+    "Test set | MobileNetV2 | MobileNetV3-Small | Paper\n",
+    "--- | --- | --- | ---\n",
+    "original | 93.80% | 91.46% | 95.5%\n",
+    "only_bg_t | 13.16% | 14.44% | 16.3%\n",
+    "mixed_same | 80.05% | 74.42% | 84.0%\n",
+    "mixed_rand | 70.49% | 60.44% | 73.2%\n",
+    "BG-Gap | 9.56% | 13.98% | 10.8%\n",
+    "\n",
+    "The main point that the paper is emphasising still holds event though the model used here is slightly different. Clearly these models also somewhat rely on the background signal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -69,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {
     "id": "3vAktiB2Jfiv"
    },
@@ -89,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +145,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MobileNetV2\n",
+    "Torch only offers mobilenetv2, whereas the paper in question uses mobilenetv3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -139,29 +167,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://github.com/pytorch/vision/archive/v0.6.0.zip\" to /Users/mattwear/.cache/torch/hub/v0.6.0.zip\n",
-      "Downloading: \"https://download.pytorch.org/models/mobilenet_v2-b0353104.pth\" to /Users/mattwear/.cache/torch/hub/checkpoints/mobilenet_v2-b0353104.pth\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "761aa794294f4d2692c7c9e013e939aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=14212972), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Using cache found in /Users/mattwear/.cache/torch/hub/pytorch_vision_v0.6.0\n"
      ]
     },
     {
@@ -454,7 +460,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,18 +494,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "80.04938271604938"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 80.05 %\n"
+     ]
     }
    ],
    "source": [
@@ -509,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -546,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,6 +601,332 @@
    "source": [
     "#Compute model accuracy on only_bg_t\n",
     "getModelAccuracy(mobilenet, only_bg_t, in_to_in9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MobileNetV3\n",
+    "Only the small version of mobilnetv3 is available pretrained. \n",
+    "Credit: https://github.com/kuan-wang/pytorch-mobilenet-v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "\n",
+    "__all__ = ['MobileNetV3', 'mobilenetv3']\n",
+    "\n",
+    "\n",
+    "def conv_bn(inp, oup, stride, conv_layer=nn.Conv2d, norm_layer=nn.BatchNorm2d, nlin_layer=nn.ReLU):\n",
+    "    return nn.Sequential(\n",
+    "        conv_layer(inp, oup, 3, stride, 1, bias=False),\n",
+    "        norm_layer(oup),\n",
+    "        nlin_layer(inplace=True)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def conv_1x1_bn(inp, oup, conv_layer=nn.Conv2d, norm_layer=nn.BatchNorm2d, nlin_layer=nn.ReLU):\n",
+    "    return nn.Sequential(\n",
+    "        conv_layer(inp, oup, 1, 1, 0, bias=False),\n",
+    "        norm_layer(oup),\n",
+    "        nlin_layer(inplace=True)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class Hswish(nn.Module):\n",
+    "    def __init__(self, inplace=True):\n",
+    "        super(Hswish, self).__init__()\n",
+    "        self.inplace = inplace\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return x * F.relu6(x + 3., inplace=self.inplace) / 6.\n",
+    "\n",
+    "\n",
+    "class Hsigmoid(nn.Module):\n",
+    "    def __init__(self, inplace=True):\n",
+    "        super(Hsigmoid, self).__init__()\n",
+    "        self.inplace = inplace\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return F.relu6(x + 3., inplace=self.inplace) / 6.\n",
+    "\n",
+    "\n",
+    "class SEModule(nn.Module):\n",
+    "    def __init__(self, channel, reduction=4):\n",
+    "        super(SEModule, self).__init__()\n",
+    "        self.avg_pool = nn.AdaptiveAvgPool2d(1)\n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(channel, channel // reduction, bias=False),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(channel // reduction, channel, bias=False),\n",
+    "            Hsigmoid()\n",
+    "            # nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        b, c, _, _ = x.size()\n",
+    "        y = self.avg_pool(x).view(b, c)\n",
+    "        y = self.fc(y).view(b, c, 1, 1)\n",
+    "        return x * y.expand_as(x)\n",
+    "\n",
+    "\n",
+    "class Identity(nn.Module):\n",
+    "    def __init__(self, channel):\n",
+    "        super(Identity, self).__init__()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "def make_divisible(x, divisible_by=8):\n",
+    "    import numpy as np\n",
+    "    return int(np.ceil(x * 1. / divisible_by) * divisible_by)\n",
+    "\n",
+    "\n",
+    "class MobileBottleneck(nn.Module):\n",
+    "    def __init__(self, inp, oup, kernel, stride, exp, se=False, nl='RE'):\n",
+    "        super(MobileBottleneck, self).__init__()\n",
+    "        assert stride in [1, 2]\n",
+    "        assert kernel in [3, 5]\n",
+    "        padding = (kernel - 1) // 2\n",
+    "        self.use_res_connect = stride == 1 and inp == oup\n",
+    "\n",
+    "        conv_layer = nn.Conv2d\n",
+    "        norm_layer = nn.BatchNorm2d\n",
+    "        if nl == 'RE':\n",
+    "            nlin_layer = nn.ReLU # or ReLU6\n",
+    "        elif nl == 'HS':\n",
+    "            nlin_layer = Hswish\n",
+    "        else:\n",
+    "            raise NotImplementedError\n",
+    "        if se:\n",
+    "            SELayer = SEModule\n",
+    "        else:\n",
+    "            SELayer = Identity\n",
+    "\n",
+    "        self.conv = nn.Sequential(\n",
+    "            # pw\n",
+    "            conv_layer(inp, exp, 1, 1, 0, bias=False),\n",
+    "            norm_layer(exp),\n",
+    "            nlin_layer(inplace=True),\n",
+    "            # dw\n",
+    "            conv_layer(exp, exp, kernel, stride, padding, groups=exp, bias=False),\n",
+    "            norm_layer(exp),\n",
+    "            SELayer(exp),\n",
+    "            nlin_layer(inplace=True),\n",
+    "            # pw-linear\n",
+    "            conv_layer(exp, oup, 1, 1, 0, bias=False),\n",
+    "            norm_layer(oup),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if self.use_res_connect:\n",
+    "            return x + self.conv(x)\n",
+    "        else:\n",
+    "            return self.conv(x)\n",
+    "\n",
+    "\n",
+    "class MobileNetV3(nn.Module):\n",
+    "    def __init__(self, n_class=1000, input_size=224, dropout=0.8, mode='small', width_mult=1.0):\n",
+    "        super(MobileNetV3, self).__init__()\n",
+    "        input_channel = 16\n",
+    "        last_channel = 1280\n",
+    "        if mode == 'large':\n",
+    "            # refer to Table 1 in paper\n",
+    "            mobile_setting = [\n",
+    "                # k, exp, c,  se,     nl,  s,\n",
+    "                [3, 16,  16,  False, 'RE', 1],\n",
+    "                [3, 64,  24,  False, 'RE', 2],\n",
+    "                [3, 72,  24,  False, 'RE', 1],\n",
+    "                [5, 72,  40,  True,  'RE', 2],\n",
+    "                [5, 120, 40,  True,  'RE', 1],\n",
+    "                [5, 120, 40,  True,  'RE', 1],\n",
+    "                [3, 240, 80,  False, 'HS', 2],\n",
+    "                [3, 200, 80,  False, 'HS', 1],\n",
+    "                [3, 184, 80,  False, 'HS', 1],\n",
+    "                [3, 184, 80,  False, 'HS', 1],\n",
+    "                [3, 480, 112, True,  'HS', 1],\n",
+    "                [3, 672, 112, True,  'HS', 1],\n",
+    "                [5, 672, 160, True,  'HS', 2],\n",
+    "                [5, 960, 160, True,  'HS', 1],\n",
+    "                [5, 960, 160, True,  'HS', 1],\n",
+    "            ]\n",
+    "        elif mode == 'small':\n",
+    "            # refer to Table 2 in paper\n",
+    "            mobile_setting = [\n",
+    "                # k, exp, c,  se,     nl,  s,\n",
+    "                [3, 16,  16,  True,  'RE', 2],\n",
+    "                [3, 72,  24,  False, 'RE', 2],\n",
+    "                [3, 88,  24,  False, 'RE', 1],\n",
+    "                [5, 96,  40,  True,  'HS', 2],\n",
+    "                [5, 240, 40,  True,  'HS', 1],\n",
+    "                [5, 240, 40,  True,  'HS', 1],\n",
+    "                [5, 120, 48,  True,  'HS', 1],\n",
+    "                [5, 144, 48,  True,  'HS', 1],\n",
+    "                [5, 288, 96,  True,  'HS', 2],\n",
+    "                [5, 576, 96,  True,  'HS', 1],\n",
+    "                [5, 576, 96,  True,  'HS', 1],\n",
+    "            ]\n",
+    "        else:\n",
+    "            raise NotImplementedError\n",
+    "\n",
+    "        # building first layer\n",
+    "        assert input_size % 32 == 0\n",
+    "        last_channel = make_divisible(last_channel * width_mult) if width_mult > 1.0 else last_channel\n",
+    "        self.features = [conv_bn(3, input_channel, 2, nlin_layer=Hswish)]\n",
+    "        self.classifier = []\n",
+    "\n",
+    "        # building mobile blocks\n",
+    "        for k, exp, c, se, nl, s in mobile_setting:\n",
+    "            output_channel = make_divisible(c * width_mult)\n",
+    "            exp_channel = make_divisible(exp * width_mult)\n",
+    "            self.features.append(MobileBottleneck(input_channel, output_channel, k, s, exp_channel, se, nl))\n",
+    "            input_channel = output_channel\n",
+    "\n",
+    "        # building last several layers\n",
+    "        if mode == 'large':\n",
+    "            last_conv = make_divisible(960 * width_mult)\n",
+    "            self.features.append(conv_1x1_bn(input_channel, last_conv, nlin_layer=Hswish))\n",
+    "            self.features.append(nn.AdaptiveAvgPool2d(1))\n",
+    "            self.features.append(nn.Conv2d(last_conv, last_channel, 1, 1, 0))\n",
+    "            self.features.append(Hswish(inplace=True))\n",
+    "        elif mode == 'small':\n",
+    "            last_conv = make_divisible(576 * width_mult)\n",
+    "            self.features.append(conv_1x1_bn(input_channel, last_conv, nlin_layer=Hswish))\n",
+    "            # self.features.append(SEModule(last_conv))  # refer to paper Table2, but I think this is a mistake\n",
+    "            self.features.append(nn.AdaptiveAvgPool2d(1))\n",
+    "            self.features.append(nn.Conv2d(last_conv, last_channel, 1, 1, 0))\n",
+    "            self.features.append(Hswish(inplace=True))\n",
+    "        else:\n",
+    "            raise NotImplementedError\n",
+    "\n",
+    "        # make it nn.Sequential\n",
+    "        self.features = nn.Sequential(*self.features)\n",
+    "\n",
+    "        # building classifier\n",
+    "        self.classifier = nn.Sequential(\n",
+    "            nn.Dropout(p=dropout),    # refer to paper section 6\n",
+    "            nn.Linear(last_channel, n_class),\n",
+    "        )\n",
+    "\n",
+    "        self._initialize_weights()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.features(x)\n",
+    "        x = x.mean(3).mean(2)\n",
+    "        x = self.classifier(x)\n",
+    "        return x\n",
+    "\n",
+    "    def _initialize_weights(self):\n",
+    "        # weight initialization\n",
+    "        for m in self.modules():\n",
+    "            if isinstance(m, nn.Conv2d):\n",
+    "                nn.init.kaiming_normal_(m.weight, mode='fan_out')\n",
+    "                if m.bias is not None:\n",
+    "                    nn.init.zeros_(m.bias)\n",
+    "            elif isinstance(m, nn.BatchNorm2d):\n",
+    "                nn.init.ones_(m.weight)\n",
+    "                nn.init.zeros_(m.bias)\n",
+    "            elif isinstance(m, nn.Linear):\n",
+    "                nn.init.normal_(m.weight, 0, 0.01)\n",
+    "                if m.bias is not None:\n",
+    "                    nn.init.zeros_(m.bias)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mobilenetv3 = MobileNetV3()\n",
+    "mobilenetv3.load_state_dict(torch.load('mobilenetv3_small_67.4.pth.tar', map_location='cpu'))\n",
+    "\n",
+    "mobilenetv3 = mobilenetv3.eval() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 74.42 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compute model accuracy on mixed_same\n",
+    "getModelAccuracy(mobilenetv3, mixed_same, in_to_in9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 60.44 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compute model accuracy on mixed_rand\n",
+    "getModelAccuracy(mobilenetv3, mixed_rand, in_to_in9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 91.46 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compute model accuracy on original\n",
+    "getModelAccuracy(mobilenetv3, original, in_to_in9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 14.44 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compute model accuracy on only_bg_t\n",
+    "getModelAccuracy(mobilenetv3, only_bg_t, in_to_in9)"
    ]
   },
   {
