--- a/DataMining/MissingValues_Matt.ipynb
+++ b/DataMining/MissingValues_Matt.ipynb
@@ -37,389 +37,100 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned !\n",
+      "One hot encodings done!\n",
+      "Dropped NANs!\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars = cc.ultimateClean(cars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>region</th>\n",
-       "      <th>price</th>\n",
-       "      <th>year</th>\n",
-       "      <th>manufacturer</th>\n",
-       "      <th>condition</th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>fuel</th>\n",
-       "      <th>odometer</th>\n",
-       "      <th>title_status</th>\n",
-       "      <th>transmission</th>\n",
-       "      <th>drive</th>\n",
-       "      <th>type</th>\n",
-       "      <th>paint_color</th>\n",
-       "      <th>description</th>\n",
-       "      <th>state</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "      <th>posting_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>auburn</td>\n",
-       "      <td>35990</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>good</td>\n",
-       "      <td>8 cylinders</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>32742.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>other</td>\n",
-       "      <td>rwd</td>\n",
-       "      <td>other</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Carvana is the safer way to buy a car During t...</td>\n",
-       "      <td>al</td>\n",
-       "      <td>32.590000</td>\n",
-       "      <td>-85.480000</td>\n",
-       "      <td>2020-12-02T08:11:30-0600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>auburn</td>\n",
-       "      <td>7500</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>hyundai</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>4 cylinders</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>93600.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>fwd</td>\n",
-       "      <td>sedan</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>I'll move to another city and try to sell my c...</td>\n",
-       "      <td>al</td>\n",
-       "      <td>32.547500</td>\n",
-       "      <td>-85.468200</td>\n",
-       "      <td>2020-12-02T02:11:50-0600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>auburn</td>\n",
-       "      <td>4900</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>bmw</td>\n",
-       "      <td>good</td>\n",
-       "      <td>6 cylinders</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>87046.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>Clean 2006 BMW X3 3.0I.  Beautiful and rare Bl...</td>\n",
-       "      <td>al</td>\n",
-       "      <td>32.616807</td>\n",
-       "      <td>-85.464149</td>\n",
-       "      <td>2020-12-01T19:50:41-0600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>auburn</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>1974.0</td>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>good</td>\n",
-       "      <td>4 cylinders</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>190000.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>rwd</td>\n",
-       "      <td>pickup</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>1974 chev. truck (LONG BED) NEW starter front ...</td>\n",
-       "      <td>al</td>\n",
-       "      <td>32.861600</td>\n",
-       "      <td>-85.216100</td>\n",
-       "      <td>2020-12-01T15:54:45-0600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>auburn</td>\n",
-       "      <td>19500</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>ford</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>8 cylinders</td>\n",
-       "      <td>diesel</td>\n",
-       "      <td>116000.0</td>\n",
-       "      <td>lien</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>4wd</td>\n",
-       "      <td>pickup</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>2005 Ford F350 Lariat (Bullet Proofed). This t...</td>\n",
-       "      <td>al</td>\n",
-       "      <td>32.547500</td>\n",
-       "      <td>-85.468200</td>\n",
-       "      <td>2020-12-01T12:53:56-0600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>458208</td>\n",
-       "      <td>wausau</td>\n",
-       "      <td>14995</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>cadillac</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>6 cylinders</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>83790.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>4wd</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>silver</td>\n",
-       "      <td>2014 Cadillac SRX All Wheel Drive Luxury Colle...</td>\n",
-       "      <td>wi</td>\n",
-       "      <td>44.408867</td>\n",
-       "      <td>-89.881210</td>\n",
-       "      <td>2020-12-03T08:56:29-0600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>458209</td>\n",
-       "      <td>wausau</td>\n",
-       "      <td>17895</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>hyundai</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>4 cylinders</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>31888.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>4wd</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>white</td>\n",
-       "      <td>2018 Hyundai Tucson SE 2.0 I4 AWD.  Carfax ver...</td>\n",
-       "      <td>wi</td>\n",
-       "      <td>44.408867</td>\n",
-       "      <td>-89.882240</td>\n",
-       "      <td>2020-12-03T08:48:08-0600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>458210</td>\n",
-       "      <td>wyoming</td>\n",
-       "      <td>17900</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>cadillac</td>\n",
-       "      <td>excellent</td>\n",
-       "      <td>6 cylinders</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>53000.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>4wd</td>\n",
-       "      <td>coupe</td>\n",
-       "      <td>black</td>\n",
-       "      <td>53,000 miles. Cosmetically, in near mint condi...</td>\n",
-       "      <td>wy</td>\n",
-       "      <td>44.784900</td>\n",
-       "      <td>-106.964800</td>\n",
-       "      <td>2020-12-02T14:09:45-0700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>458211</td>\n",
-       "      <td>wyoming</td>\n",
-       "      <td>1300</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>jeep</td>\n",
-       "      <td>good</td>\n",
-       "      <td>8 cylinders</td>\n",
-       "      <td>gas</td>\n",
-       "      <td>164000.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>4wd</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>white</td>\n",
-       "      <td>PRICE REDUCTION  Turns out the engine is toast...</td>\n",
-       "      <td>wy</td>\n",
-       "      <td>44.773500</td>\n",
-       "      <td>-106.939600</td>\n",
-       "      <td>2020-12-02T13:01:04-0700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>458212</td>\n",
-       "      <td>wyoming</td>\n",
-       "      <td>22900</td>\n",
-       "      <td>2008.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>diesel</td>\n",
-       "      <td>164000.0</td>\n",
-       "      <td>clean</td>\n",
-       "      <td>automatic</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>*** SHIPPING AVAILABLE DIRECTLY TO YOU. CALL F...</td>\n",
-       "      <td>wy</td>\n",
-       "      <td>42.117656</td>\n",
-       "      <td>-88.436954</td>\n",
-       "      <td>2020-12-02T12:03:45-0700</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>458213 rows × 18 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         region  price    year manufacturer  condition    cylinders    fuel  \\\n",
-       "0        auburn  35990  2010.0    chevrolet       good  8 cylinders     gas   \n",
-       "1        auburn   7500  2014.0      hyundai  excellent  4 cylinders     gas   \n",
-       "2        auburn   4900  2006.0          bmw       good  6 cylinders     gas   \n",
-       "3        auburn   2000  1974.0    chevrolet       good  4 cylinders     gas   \n",
-       "4        auburn  19500  2005.0         ford  excellent  8 cylinders  diesel   \n",
-       "...         ...    ...     ...          ...        ...          ...     ...   \n",
-       "458208   wausau  14995  2014.0     cadillac  excellent  6 cylinders     gas   \n",
-       "458209   wausau  17895  2018.0      hyundai  excellent  4 cylinders     gas   \n",
-       "458210  wyoming  17900  2014.0     cadillac  excellent  6 cylinders     gas   \n",
-       "458211  wyoming   1300  2008.0         jeep       good  8 cylinders     gas   \n",
-       "458212  wyoming  22900  2008.0          NaN        NaN          NaN  diesel   \n",
-       "\n",
-       "        odometer title_status transmission drive    type paint_color  \\\n",
-       "0        32742.0        clean        other   rwd   other         NaN   \n",
-       "1        93600.0        clean    automatic   fwd   sedan         NaN   \n",
-       "2        87046.0        clean    automatic   NaN     SUV        blue   \n",
-       "3       190000.0        clean    automatic   rwd  pickup        blue   \n",
-       "4       116000.0         lien    automatic   4wd  pickup        blue   \n",
-       "...          ...          ...          ...   ...     ...         ...   \n",
-       "458208   83790.0        clean    automatic   4wd     SUV      silver   \n",
-       "458209   31888.0        clean    automatic   4wd     SUV       white   \n",
-       "458210   53000.0        clean    automatic   4wd   coupe       black   \n",
-       "458211  164000.0        clean    automatic   4wd     SUV       white   \n",
-       "458212  164000.0        clean    automatic   NaN     NaN         NaN   \n",
-       "\n",
-       "                                              description state        lat  \\\n",
-       "0       Carvana is the safer way to buy a car During t...    al  32.590000   \n",
-       "1       I'll move to another city and try to sell my c...    al  32.547500   \n",
-       "2       Clean 2006 BMW X3 3.0I.  Beautiful and rare Bl...    al  32.616807   \n",
-       "3       1974 chev. truck (LONG BED) NEW starter front ...    al  32.861600   \n",
-       "4       2005 Ford F350 Lariat (Bullet Proofed). This t...    al  32.547500   \n",
-       "...                                                   ...   ...        ...   \n",
-       "458208  2014 Cadillac SRX All Wheel Drive Luxury Colle...    wi  44.408867   \n",
-       "458209  2018 Hyundai Tucson SE 2.0 I4 AWD.  Carfax ver...    wi  44.408867   \n",
-       "458210  53,000 miles. Cosmetically, in near mint condi...    wy  44.784900   \n",
-       "458211  PRICE REDUCTION  Turns out the engine is toast...    wy  44.773500   \n",
-       "458212  *** SHIPPING AVAILABLE DIRECTLY TO YOU. CALL F...    wy  42.117656   \n",
-       "\n",
-       "              long              posting_date  \n",
-       "0       -85.480000  2020-12-02T08:11:30-0600  \n",
-       "1       -85.468200  2020-12-02T02:11:50-0600  \n",
-       "2       -85.464149  2020-12-01T19:50:41-0600  \n",
-       "3       -85.216100  2020-12-01T15:54:45-0600  \n",
-       "4       -85.468200  2020-12-01T12:53:56-0600  \n",
-       "...            ...                       ...  \n",
-       "458208  -89.881210  2020-12-03T08:56:29-0600  \n",
-       "458209  -89.882240  2020-12-03T08:48:08-0600  \n",
-       "458210 -106.964800  2020-12-02T14:09:45-0700  \n",
-       "458211 -106.939600  2020-12-02T13:01:04-0700  \n",
-       "458212  -88.436954  2020-12-02T12:03:45-0700  \n",
-       "\n",
-       "[458213 rows x 18 columns]"
+       "price                          0\n",
+       "year                         902\n",
+       "manufacturer               10081\n",
+       "condition                 167392\n",
+       "cylinders                 151846\n",
+       "fuel                         238\n",
+       "odometer                      23\n",
+       "type                      103595\n",
+       "description                    0\n",
+       "lat                            0\n",
+       "long                           0\n",
+       "posting_date                   0\n",
+       "color_black                    0\n",
+       "color_other                    0\n",
+       "color_silver                   0\n",
+       "color_white                    0\n",
+       "drive_4wd                      0\n",
+       "drive_fwd                      0\n",
+       "drive_other                    0\n",
+       "drive_rwd                      0\n",
+       "transmission_automatic         0\n",
+       "transmission_manual            0\n",
+       "transmission_other             0\n",
+       "status_clean                   0\n",
+       "status_lien                    0\n",
+       "status_missing                 0\n",
+       "status_parts only              0\n",
+       "status_rebuilt                 0\n",
+       "status_salvage                 0\n",
+       "state_ak                       0\n",
+       "state_al                       0\n",
+       "state_ar                       0\n",
+       "state_az                       0\n",
+       "state_ca                       0\n",
+       "state_co                       0\n",
+       "state_ct                       0\n",
+       "state_dc                       0\n",
+       "state_de                       0\n",
+       "state_fl                       0\n",
+       "state_ga                       0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "cars.isnull().sum()[:40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "cc.remove_columns(cars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "region               0\n",
-       "price                0\n",
-       "year              1050\n",
-       "manufacturer     18220\n",
-       "condition       192940\n",
-       "cylinders       171140\n",
-       "fuel               343\n",
-       "odometer         55303\n",
-       "title_status      2577\n",
-       "transmission       197\n",
-       "drive           134188\n",
-       "type            112738\n",
-       "paint_color     140843\n",
-       "description          0\n",
-       "state                0\n",
-       "lat                  0\n",
-       "long                 0\n",
-       "posting_date         0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cars.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cars = impute_manufacturer(cars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
