--- a/DataMining/diego testing.ipynb
+++ b/DataMining/diego testing.ipynb
@@ -919,7 +919,7 @@
       "Cleaned outliers !\n",
       "Imputed Missing Values\n",
       "One hot encodings done!\n",
-      "Total Time:  -333.22326016426086\n"
+      "Total Time:  5.879528725147248  minutes\n"
      ]
     }
    ],
@@ -1138,34 +1138,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['price', 'year', 'manufacturer', 'condition', 'odometer', 'type',\n",
-       "       'description', 'lat', 'long', 'color_black', 'color_other',\n",
-       "       'color_silver', 'color_white', 'drive_4wd', 'drive_fwd', 'drive_other',\n",
-       "       'drive_rwd', 'transmission_automatic', 'transmission_manual',\n",
-       "       'transmission_other', 'status_clean', 'status_lien', 'status_missing',\n",
-       "       'status_parts only', 'status_rebuilt', 'status_salvage', 'state_ak',\n",
-       "       'state_al', 'state_ar', 'state_az', 'state_ca', 'state_co', 'state_ct',\n",
-       "       'state_dc', 'state_de', 'state_fl', 'state_ga', 'state_hi', 'state_ia',\n",
-       "       'state_id', 'state_il', 'state_in', 'state_ks', 'state_ky', 'state_la',\n",
-       "       'state_ma', 'state_md', 'state_me', 'state_mi', 'state_mn', 'state_mo',\n",
-       "       'state_ms', 'state_mt', 'state_nc', 'state_nd', 'state_ne', 'state_nh',\n",
-       "       'state_nj', 'state_nm', 'state_nv', 'state_ny', 'state_oh', 'state_ok',\n",
-       "       'state_or', 'state_pa', 'state_ri', 'state_sc', 'state_sd', 'state_tn',\n",
-       "       'state_tx', 'state_ut', 'state_va', 'state_vt', 'state_wa', 'state_wi',\n",
-       "       'state_wv', 'state_wy', 'cylinders_4 cylinders',\n",
-       "       'cylinders_6 cylinders', 'cylinders_8 cylinders', 'cylinders_missing',\n",
-       "       'fuel_diesel', 'fuel_electric', 'fuel_gas', 'fuel_hybrid',\n",
-       "       'fuel_other'],\n",
+       "Index(['price', 'year', 'condition', 'odometer', 'lat', 'long', 'color_black',\n",
+       "       'color_other', 'color_silver', 'color_white', 'drive_4wd', 'drive_fwd',\n",
+       "       'drive_other', 'drive_rwd', 'transmission_automatic',\n",
+       "       'transmission_manual', 'transmission_other', 'status_clean',\n",
+       "       'status_lien', 'status_missing', 'status_parts only', 'status_rebuilt',\n",
+       "       'status_salvage', 'state_ak', 'state_al', 'state_ar', 'state_az',\n",
+       "       'state_ca', 'state_co', 'state_ct', 'state_dc', 'state_de', 'state_fl',\n",
+       "       'state_ga', 'state_hi', 'state_ia', 'state_id', 'state_il', 'state_in',\n",
+       "       'state_ks', 'state_ky', 'state_la', 'state_ma', 'state_md', 'state_me',\n",
+       "       'state_mi', 'state_mn', 'state_mo', 'state_ms', 'state_mt', 'state_nc',\n",
+       "       'state_nd', 'state_ne', 'state_nh', 'state_nj', 'state_nm', 'state_nv',\n",
+       "       'state_ny', 'state_oh', 'state_ok', 'state_or', 'state_pa', 'state_ri',\n",
+       "       'state_sc', 'state_sd', 'state_tn', 'state_tx', 'state_ut', 'state_va',\n",
+       "       'state_vt', 'state_wa', 'state_wi', 'state_wv', 'state_wy',\n",
+       "       'cylinders_4 cylinders', 'cylinders_6 cylinders',\n",
+       "       'cylinders_8 cylinders', 'cylinders_missing', 'fuel_diesel',\n",
+       "       'fuel_electric', 'fuel_gas', 'fuel_hybrid', 'fuel_other', 'tfidf_0',\n",
+       "       'tfidf_2', 'tfidf_4', 'tfidf_5', 'tfidf_6', 'tfidf_7', 'tfidf_8',\n",
+       "       'tfidf_9'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1184,13 +1185,18 @@
       "text/plain": [
        "[dtype('int64'),\n",
        " dtype('float64'),\n",
-       " dtype('O'),\n",
        " dtype('int64'),\n",
        " dtype('float64'),\n",
-       " dtype('O'),\n",
-       " dtype('O'),\n",
        " dtype('float64'),\n",
        " dtype('float64'),\n",
+       " dtype('uint8'),\n",
+       " dtype('uint8'),\n",
+       " dtype('uint8'),\n",
+       " dtype('uint8'),\n",
+       " dtype('uint8'),\n",
+       " dtype('uint8'),\n",
+       " dtype('uint8'),\n",
+       " dtype('uint8'),\n",
        " dtype('uint8'),\n",
        " dtype('uint8'),\n",
        " dtype('uint8'),\n",
@@ -1270,7 +1276,7 @@
        " dtype('uint8')]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
