diego data mining linear regression 2

--- a/DataMining/diego testing.ipynb
+++ b/DataMining/diego testing.ipynb
@@ -919,7 +919,7 @@
       "Cleaned outliers !\n",
       "Imputed Missing Values\n",
       "One hot encodings done!\n",
-      "Total Time:  6.068484743436177  minutes\n"
+      "Total Time:  9.433462182680765  minutes\n"
      ]
     }
    ],
@@ -964,8 +964,8 @@
        "      <th>color_silver</th>\n",
        "      <th>color_white</th>\n",
        "      <th>...</th>\n",
-       "      <th>fuel_hybrid</th>\n",
-       "      <th>fuel_other</th>\n",
+       "      <th>manuf_country_USA</th>\n",
+       "      <th>manuf_country_missing</th>\n",
        "      <th>tfidf_0</th>\n",
        "      <th>tfidf_2</th>\n",
        "      <th>tfidf_4</th>\n",
@@ -990,7 +990,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1062,7 +1062,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1086,7 +1086,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1099,7 +1099,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 91 columns</p>\n",
+       "<p>5 rows × 103 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1110,21 +1110,28 @@
        "3   2000  1974.0          1  190000.0  32.861600 -85.216100            0   \n",
        "4  19500  2005.0          1  116000.0  32.547500 -85.468200            0   \n",
        "\n",
-       "   color_other  color_silver  color_white  ...  fuel_hybrid  fuel_other  \\\n",
-       "0            1             0            0  ...            0           0   \n",
-       "1            1             0            0  ...            0           0   \n",
-       "2            1             0            0  ...            0           0   \n",
-       "3            1             0            0  ...            0           0   \n",
-       "4            1             0            0  ...            0           0   \n",
+       "   color_other  color_silver  color_white  ...  manuf_country_USA  \\\n",
+       "0            1             0            0  ...                  1   \n",
+       "1            1             0            0  ...                  0   \n",
+       "2            1             0            0  ...                  0   \n",
+       "3            1             0            0  ...                  1   \n",
+       "4            1             0            0  ...                  1   \n",
        "\n",
-       "   tfidf_0  tfidf_2  tfidf_4  tfidf_5  tfidf_6  tfidf_7  tfidf_8  tfidf_9  \n",
-       "0        0        0        1        0        0        0        0        0  \n",
-       "1        0        0        1        0        0        0        0        0  \n",
-       "2        0        0        1        0        0        0        0        0  \n",
-       "3        0        0        1        0        0        0        0        0  \n",
-       "4        0        0        1        0        0        0        0        0  \n",
+       "   manuf_country_missing  tfidf_0  tfidf_2  tfidf_4  tfidf_5  tfidf_6  \\\n",
+       "0                      0        0        0        1        0        0   \n",
+       "1                      0        0        0        1        0        0   \n",
+       "2                      0        0        0        1        0        0   \n",
+       "3                      0        0        0        1        0        0   \n",
+       "4                      0        0        0        1        0        0   \n",
        "\n",
-       "[5 rows x 91 columns]"
+       "   tfidf_7  tfidf_8  tfidf_9  \n",
+       "0        0        0        0  \n",
+       "1        0        0        0  \n",
+       "2        0        0        0  \n",
+       "3        0        0        0  \n",
+       "4        0        0        0  \n",
+       "\n",
+       "[5 rows x 103 columns]"
       ]
      },
      "execution_count": 4,
@@ -1138,41 +1145,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['price', 'year', 'condition', 'odometer', 'lat', 'long', 'color_black',\n",
-       "       'color_other', 'color_silver', 'color_white', 'drive_4wd', 'drive_fwd',\n",
-       "       'drive_other', 'drive_rwd', 'transmission_automatic',\n",
-       "       'transmission_manual', 'transmission_other', 'status_clean',\n",
-       "       'status_lien', 'status_missing', 'status_parts only', 'status_rebuilt',\n",
-       "       'status_salvage', 'state_ak', 'state_al', 'state_ar', 'state_az',\n",
-       "       'state_ca', 'state_co', 'state_ct', 'state_dc', 'state_de', 'state_fl',\n",
-       "       'state_ga', 'state_hi', 'state_ia', 'state_id', 'state_il', 'state_in',\n",
-       "       'state_ks', 'state_ky', 'state_la', 'state_ma', 'state_md', 'state_me',\n",
-       "       'state_mi', 'state_mn', 'state_mo', 'state_ms', 'state_mt', 'state_nc',\n",
-       "       'state_nd', 'state_ne', 'state_nh', 'state_nj', 'state_nm', 'state_nv',\n",
-       "       'state_ny', 'state_oh', 'state_ok', 'state_or', 'state_pa', 'state_ri',\n",
-       "       'state_sc', 'state_sd', 'state_tn', 'state_tx', 'state_ut', 'state_va',\n",
-       "       'state_vt', 'state_wa', 'state_wi', 'state_wv', 'state_wy',\n",
-       "       'cylinders_4 cylinders', 'cylinders_6 cylinders',\n",
-       "       'cylinders_8 cylinders', 'cylinders_missing', 'fuel_diesel',\n",
-       "       'fuel_electric', 'fuel_gas', 'fuel_hybrid', 'fuel_other', 'tfidf_0',\n",
-       "       'tfidf_2', 'tfidf_4', 'tfidf_5', 'tfidf_6', 'tfidf_7', 'tfidf_8',\n",
-       "       'tfidf_9'],\n",
-       "      dtype='object')"
+       "['price',\n",
+       " 'year',\n",
+       " 'condition',\n",
+       " 'odometer',\n",
+       " 'lat',\n",
+       " 'long',\n",
+       " 'color_black',\n",
+       " 'color_other',\n",
+       " 'color_silver',\n",
+       " 'color_white',\n",
+       " 'drive_4wd',\n",
+       " 'drive_fwd',\n",
+       " 'drive_other',\n",
+       " 'drive_rwd',\n",
+       " 'transmission_automatic',\n",
+       " 'transmission_manual',\n",
+       " 'transmission_other',\n",
+       " 'status_clean',\n",
+       " 'status_lien',\n",
+       " 'status_missing',\n",
+       " 'status_parts only',\n",
+       " 'status_rebuilt',\n",
+       " 'status_salvage',\n",
+       " 'state_ak',\n",
+       " 'state_al',\n",
+       " 'state_ar',\n",
+       " 'state_az',\n",
+       " 'state_ca',\n",
+       " 'state_co',\n",
+       " 'state_ct',\n",
+       " 'state_dc',\n",
+       " 'state_de',\n",
+       " 'state_fl',\n",
+       " 'state_ga',\n",
+       " 'state_hi',\n",
+       " 'state_ia',\n",
+       " 'state_id',\n",
+       " 'state_il',\n",
+       " 'state_in',\n",
+       " 'state_ks',\n",
+       " 'state_ky',\n",
+       " 'state_la',\n",
+       " 'state_ma',\n",
+       " 'state_md',\n",
+       " 'state_me',\n",
+       " 'state_mi',\n",
+       " 'state_mn',\n",
+       " 'state_mo',\n",
+       " 'state_ms',\n",
+       " 'state_mt',\n",
+       " 'state_nc',\n",
+       " 'state_nd',\n",
+       " 'state_ne',\n",
+       " 'state_nh',\n",
+       " 'state_nj',\n",
+       " 'state_nm',\n",
+       " 'state_nv',\n",
+       " 'state_ny',\n",
+       " 'state_oh',\n",
+       " 'state_ok',\n",
+       " 'state_or',\n",
+       " 'state_pa',\n",
+       " 'state_ri',\n",
+       " 'state_sc',\n",
+       " 'state_sd',\n",
+       " 'state_tn',\n",
+       " 'state_tx',\n",
+       " 'state_ut',\n",
+       " 'state_va',\n",
+       " 'state_vt',\n",
+       " 'state_wa',\n",
+       " 'state_wi',\n",
+       " 'state_wv',\n",
+       " 'state_wy',\n",
+       " 'cylinders_4 cylinders',\n",
+       " 'cylinders_6 cylinders',\n",
+       " 'cylinders_8 cylinders',\n",
+       " 'cylinders_missing',\n",
+       " 'fuel_diesel',\n",
+       " 'fuel_electric',\n",
+       " 'fuel_gas',\n",
+       " 'fuel_hybrid',\n",
+       " 'fuel_other',\n",
+       " 'usage_type_daily',\n",
+       " 'usage_type_missing',\n",
+       " 'usage_type_other',\n",
+       " 'usage_type_professional',\n",
+       " 'manuf_country_Germany',\n",
+       " 'manuf_country_Italy',\n",
+       " 'manuf_country_Japan',\n",
+       " 'manuf_country_S.Korea',\n",
+       " 'manuf_country_Sweden',\n",
+       " 'manuf_country_UK',\n",
+       " 'manuf_country_USA',\n",
+       " 'manuf_country_missing',\n",
+       " 'tfidf_0',\n",
+       " 'tfidf_2',\n",
+       " 'tfidf_4',\n",
+       " 'tfidf_5',\n",
+       " 'tfidf_6',\n",
+       " 'tfidf_7',\n",
+       " 'tfidf_8',\n",
+       " 'tfidf_9']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_processed.columns"
+    "list(df_processed.columns)"
    ]
   },
   {
