--- a/AML/Model_panpan.ipynb
+++ b/AML/Model_panpan.ipynb
@@ -716,11 +716,7 @@
     "print('train rmse error', rmse(y_train_predicted, y_train))\n",
     "\n",
     "y_test_predicted = knn.predict(X_test)\n",
-    "print('test rmse error', rmse(y_test_predicted, y_test))\n",
-    "\n",
-    "lin_scores = cross_val_score(knn, X_train, y_train, scoring=\"neg_mean_squared_error\", cv=10)\n",
-    "\n",
-    "display_scores(np.sqrt(-lin_scores))\n"
+    "print('test rmse error', rmse(y_test_predicted, y_test))\n"
    ]
   },
   {
@@ -748,6 +744,17 @@
     "xgb_reg = xgb(params) \n",
     "xb = xgb_reg.fit(X_train,y_train)\n",
     "y_pred=xgb_reg.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = cross_val_score(forest_reg, X_train, y_train, scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "\n",
+    "display_scores(np.sqrt(-scores))\n"
    ]
   },
   {
