Added ResNet50 to Table 2 summary

--- a/Deep Learning/Table2_Matt.ipynb
+++ b/Deep Learning/Table2_Matt.ipynb
@@ -779,13 +779,13 @@
         "\n",
         "Summary: \n",
         "\n",
-        "Test set | MobileNetV2 | MobileNetV3-Small | MobileNetV3-Large | EfficientNet | DPN-92 | WRN50x2\n",
-        "--- | --- | --- | --- | --- | --- | ---\n",
-        "original | 93.8% | 91.5% | 95.0% | 94.7% | 97.2% | 96.6%\n",
-        "only_bg_t | 13.2% | 14.4% | 16.00% | 10.6% | 17.6% | 18.8%\n",
-        "mixed_same | 80.1% | 74.4% | 81.7% | 87.1%| 90.5% | 88.3%\n",
-        "mixed_rand | 70.5% | 60.4% | 70.3% | 80.2% | 86.0% | 81.4%\n",
-        "BG-Gap | 9.6% | 14.0% | 11.4% | 6.9% | 4.5% | 6.9%\n",
+        "Test set | MobileNetV2 | MobileNetV3-Small | MobileNetV3-Large | EfficientNet | ResNet-50 | DPN-92 | WRN50x2\n",
+        "--- | --- | --- | --- | --- | --- | --- | ---\n",
+        "original | 93.8% | 91.5% | 95.0% | 94.7% | 95.2% | 97.2% | 96.6%\n",
+        "only_bg_t | 13.2% | 14.4% | 16.00% | 10.6% | 16.8% | 17.6% | 18.8%\n",
+        "mixed_same | 80.1% | 74.4% | 81.7% | 87.1%| 80.5% | 90.5% | 88.3%\n",
+        "mixed_rand | 70.5% | 60.4% | 70.3% | 80.2% | 69.8% | 86.0% | 81.4%\n",
+        "BG-Gap | 9.6% | 14.0% | 11.4% | 6.9% | 10.7% | 4.5% | 6.9%\n",
         "\n",
         "The main point that the paper is emphasising still holds event though there is slight discrepencies in most accuracy figures. Clearly these models also somewhat rely on the background signal."
       ]
@@ -803,7 +803,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,7 +829,7 @@
         "!unzip drive/MyDrive/ReproducabilityChallenge/original.zip\n",
         "!unzip drive/MyDrive/ReproducabilityChallenge/mixed_same.zip"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5868,7 +5868,7 @@
         "    !pip install torchbearer\n",
         "    import torchbearer"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5909,7 +5909,7 @@
         "import torchvision\n",
         "import numpy as np"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5929,7 +5929,7 @@
         "    testloader = DataLoader(imgFolder, batch_size=32, shuffle=False)\n",
         "    return testloader"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5974,7 +5974,7 @@
         "\n",
         "    print('Test Accuracy: %2.2f %%' % ((100.0 * correct) / total))\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5988,7 +5988,7 @@
         "      in_to_in9 = json.load(f)\n",
         "    return in_to_in9"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6000,7 +6000,7 @@
         "#Get the imagenet to in9l class converter\n",
         "in_to_in9 = getIn2In9(root='drive/MyDrive/ReproducabilityChallenge/')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6012,7 +6012,7 @@
         "#Get the mixed_same dataset\n",
         "mixed_same = getDataLoader(datadir = 'mixed_same/val')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6024,7 +6024,7 @@
         "#Get the mixed_rand dataset\n",
         "mixed_rand = getDataLoader(datadir = 'mixed_rand/val')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6036,7 +6036,7 @@
         "#Get the original dataset\n",
         "original = getDataLoader(datadir = 'original/val')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6048,7 +6048,7 @@
         "#Get the only_bg_t dataset\n",
         "only_bg_t = getDataLoader(datadir = 'only_bg_t/val')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8727,7 +8727,7 @@
         "wrn.to('cuda:0')\n",
         "wrn.eval()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8960,7 +8960,7 @@
       "source": [
         "getModelAccuracyCuda(wrn, mixed_same, in_to_in9)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8983,7 +8983,7 @@
       "source": [
         "getModelAccuracyCuda(wrn, mixed_rand, in_to_in9)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9006,7 +9006,7 @@
       "source": [
         "getModelAccuracyCuda(wrn, original, in_to_in9)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9029,7 +9029,7 @@
       "source": [
         "getModelAccuracyCuda(wrn, only_bg_t, in_to_in9)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
